Tried to align list Tried to align list Tried to align list Tried to align list Accepted my fate Fixed unclosed tag

--- a/css/screen.css
+++ b/css/screen.css
@@ -26,6 +26,7 @@ body {
 h1 {
   text-align: center;
   font-size: 4em;
+  padding: .5em;
 }
 
 figure {
@@ -34,11 +35,19 @@ figure {
 
 ul {
   padding: 1em;
+  text-align: center;
+  width: 100%;
+}
+
+li {
+  display: inline-block;
+  padding: .5em;
 }
 
 h3 {
   text-align: center;
   font-size: 1em;
+  font-weight: 700;
 }
 
 footer {
@@ -50,8 +59,7 @@ footer {
 
 form {
   box-sizing: border-box;
-  height: 100%;
-  width: 50%;
+  width: 100%;
   padding: 1em;
 }
 
